--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config index.js",
+    "start": "nodemon -r dotenv/config ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +14,9 @@
   "module": "esnext",
   "type": "module",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "openai": "^3.2.1"
   },
   "devDependencies": {
