--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "json5": "^2.2.3",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1"
   },
