--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "json5": "^2.2.3",
+    "mongoose": "^7.1.1",
+    "mongoose-encryption": "^2.1.2",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1"
   },
