--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "gpt-3-encoder": "^1.1.4",
     "json5": "^2.2.3",
     "mongoose": "^7.1.1",
     "mongoose-encryption": "^2.1.2",
