:sparkles: Allow to set default API Keys

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 OPENAI_API_CHAT_COMPLETION_MODEL=gpt-3.5-turbo
 OPENAI_API_MAX_TOKENS=4096
 
+# OPENAI_API_KEY and OPENAI_API_ORGANIZATION are optional values, if not provided each user will have to provide their own
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+OPENAI_API_ORGANIZATION=YOUR_OPENAI_API_ORGANIZATION
+
+# JIRA_API_TOKEN and JIRA_HOST are optional values, if not provided each user will have to provide their own
+JIRA_API_TOKEN=YOUR_JIRA_API_TOKEN
+JIRA_HOST=your-organization.atlassian.net
+
 MONGODB_URL=mongodb://127.0.0.1:27017
 MONGODB_DBNAME=doit-jira
 MONGODB_SESSIONS_COLLECTION=sessions
