--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config ./src/index.js"
+    "start": "nodemon -r dotenv/config ./src/server.js"
   },
   "keywords": [],
   "author": "Mateusz Adamczyk (@bobbylej)",
