:goal_net: Add Sentry to track errors

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ MONGODB_DBNAME=doit-jira
 MONGODB_SESSIONS_COLLECTION=sessions
 MONGODB_ENCRYPTION_KEY=SOME_32BYTE_BASE64_STRING
 MONGODB_SIGNING_KEY=SOME_64BYTE_BASE64_STRING
+
+SENTRY_DSN=YOUR_SENTRY_DSN
