--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "module": "esnext",
   "type": "module",
   "dependencies": {
+    "@sentry/node": "^7.60.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "gpt-3-encoder": "^1.1.4",
